{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 13,
  "lineage": "3e7f65c5-784a-ec91-002a-27f79c9a3db5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:513410254247:internet-gateway/igw-089aba23a2139efee",
            "id": "igw-089aba23a2139efee",
            "owner_id": "513410254247",
            "tags": {
              "Name": "aws_IGW"
            },
            "tags_all": {
              "Name": "aws_IGW"
            },
            "vpc_id": "vpc-0859891f31ccb4559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstone_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:513410254247:route-table/rtb-02afe8fd2d8f96215",
            "id": "rtb-02afe8fd2d8f96215",
            "owner_id": "513410254247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089aba23a2139efee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone_routetable"
            },
            "tags_all": {
              "Name": "capstone_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0859891f31ccb4559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_IGW",
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assiciation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eb04769c1ba0a00",
            "route_table_id": "rtb-02afe8fd2d8f96215",
            "subnet_id": "subnet-0c17920b9fdd32362"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_IGW",
            "aws_route_table.capstone_routetable",
            "aws_subnet.public_subnet",
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "capstone_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:513410254247:security-group/sg-0ce5cf8c47b73502d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce5cf8c47b73502d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260331161142186200000002",
            "name_prefix": "terraform-",
            "owner_id": "513410254247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-sg"
            },
            "tags_all": {
              "Name": "capstone-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0859891f31ccb4559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:513410254247:subnet/subnet-0c17920b9fdd32362",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c17920b9fdd32362",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513410254247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone_subnet"
            },
            "tags_all": {
              "Name": "capstone_subnet"
            },
            "vpc_id": "vpc-0859891f31ccb4559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capstone_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:513410254247:vpc/vpc-0859891f31ccb4559",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0014f0fdef13a7365",
            "default_route_table_id": "rtb-0fa9594fb64a07755",
            "default_security_group_id": "sg-0dfd11a38a49bda24",
            "dhcp_options_id": "dopt-00b930867027d7fc2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0859891f31ccb4559",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa9594fb64a07755",
            "owner_id": "513410254247",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}